# world-history-clock

./: .dockerignore  .env.example  .gitignore  Caddyfile  README.md  SERVER-SETUP.md  clock.py  clock_rich.py  conftest.py  deploy.sh  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  rebuild.yml
_archived/: README.md
_archived/flutter_app/: pubspec.yaml
_archived/flutter_app/lib/: main.dart
_archived/flutter_app/linux/: my_application.cc
_archived/flutter_app/test/: widget_test.dart
_archived/flutter_app/web/: index.html
cli/: README.md  pyproject.toml
cli/historieklokka/: app.py
data/: epochs.json  epochs.no.json  epochs.py  era_context.json  era_context.no.json  future_events.json  future_events.no.json
docs/: known-issues.md
feedback/: README.md  buffering-strategy.md
feedback/grilling-001/: grilling.md
feedback/round-001/: .gitkeep  SUMMARY.md  architect.md  ops-deployment.md  optimization.md  qa.md  security.md  senior-developer.md  ux-designer.md
feedback/round-002/: .gitkeep  SUMMARY.md  architect.md  ops-deployment.md  optimization.md  qa.md  security.md  senior-developer.md  ux-designer.md
flutter_app/: README.md
flutter_app/android/app/: build.gradle
flutter_app/linux/: CMakeLists.txt
flutter_app/web/: manifest.json
flutter_app/windows/: CMakeLists.txt
k8s/: DEPLOYMENT-PLAN.md
k8s/base/: argocd-app-dkub.yaml  configmap-nginx.yaml  deployment-api.yaml  deployment-web.yaml  kustomization.yaml  pvc.yaml  service-api.yaml  service-web.yaml
server/: Dockerfile  README.md  config.py  db.py  fetcher.py  main.py  requirements.txt  scorer.py  warmer.py
tests/: conftest.py  test_epochs.py  test_fetcher.py  test_wikipedia_fetcher.py  test_year_calculation.py
web/: Dockerfile  README.md  index.html  manifest.json  sw.js
(+45 files in other folders)
